[package]
name = "rex-regex"
version = "0.1.3"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
description = "A pedestrian library for regular expressions: Slow, but easy to understand"
license = "MIT"
repository = "https://github.com/dermesser/rex"
documentation = "https://docs.rs/rex-regex"
edition = "2018"

[dependencies]

[dev-dependencies]
bencher = "0.1"
regex = "1.2"

[[bench]]
name = "e2e"
harness = false

[[bench]]
name = "profile"
harness = false

[package.metadata.docs.rs]
document-private-items = true
